ensure the main view selector doesn't wrap

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-  min-width: 1040px;
+  min-width: 1090px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
